/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'scala'
    id 'io.gatling.gradle' version '3.4.1'
}

project.sourceSets {
    gatling {
        scala.srcDirs = ['src/gatling/scala']
//        resources.srcDirs = ['src/gatling/resources/data', 'src/gatling/resources/bodies', 'src/gatling/resources/conf']
    }
}


gatling {
    toolVersion = '3.4.0' //Gatling version

    // WARNING: options below only work when logback config file isn't provided
    logLevel = 'WARN' // logback root level
    logHttp = 'NONE' // set to 'ALL' for all HTTP traffic in TRACE, 'FAILURES' for failed HTTP traffic in DEBUG
    jvmArgs = [
            '-server',
            '-Xmx1G',
            '-XX:+HeapDumpOnOutOfMemoryError',
            '-XX:+UseG1GC',
            '-XX:+ParallelRefProcEnabled',
            '-XX:MaxInlineLevel=20',
            '-XX:MaxTrivialSize=12',
            '-XX:-UseBiasedLocking',
            "-Dgatling.charting.indicators.lowerBound=10",
            "-Dgatling.charting.indicators.higherBound=20"
    ]
    simulations = {
        include "**/simulations/*Simu.scala"
        include "**/simulations/*Simulation.scala"
    }
    systemProperties = ['file.encoding': 'UTF-8']
}

repositories {
    mavenLocal()
    maven {
        url = uri('http://central')
    }
}

dependencies {
    testImplementation 'io.gatling.highcharts:gatling-charts-highcharts:3.4.0'
    gatling 'com.google.code.gson:gson:2.8.6' // <1>
    gatlingImplementation 'org.apache.commons:commons-lang3:3.4' // <2>
    gatlingRuntimeOnly 'cglib:cglib-nodep:3.2.0' // <3>
}

group = 'com.gatling.sample'
version = '3.4.0'
sourceCompatibility = '1.8'
ext['netty.version'] = '4.0.51.Final'


tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
